--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,20 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
-
+.App {
+  background-color: rgba(17, 246, 66, 0.12);
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.modaldiv {
+  width: 60%;
+  height: 80%;
+  background-color: #fff;
+  border-radius: 28px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+   
+}
