--- a/src/App.css
+++ b/src/App.css
@@ -119,21 +119,67 @@ label {
 
 /* MOBILE PHONE  */
 @media only screen 
-   and (min-width : 320px) {
-   /* Styles here */
-}
+   and (min-width : 80px) {
 
-/* TABLET */
-@media only screen 
-   and (min-width : 768px) {
+    .App {
+      background-color: #fff;
+      height: 100vh;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
 
     .modaldiv { 
+      width: 100%;
+      height: 100%;
       grid-template-columns: 1fr;
       grid-template-rows: auto 1fr;
       height: auto;
       grid-template-areas: 
       "first"
       "last";
+      box-shadow: none;
+
+    }
+    .rightModal{ 
+      grid-area: first;
+
+    }
+    .borderLine {
+      display: none;
+    }
+    .leftModal {
+      grid-area: last;
+
+    }
+}
+
+/* TABLET */
+@media only screen 
+   and (min-width : 768px) {
+
+    .App {
+      background-color: rgba(17, 246, 66, 0.12);
+      height: 100vh;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modaldiv {
+      width: 60%;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto 1fr;
+      height: 95%;
+      overflow: auto;
+      grid-template-areas: 
+      "first"
+      "last";
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
     }
     .rightModal{ 
@@ -154,14 +200,29 @@ label {
 /* LAPTOP */
 @media only screen 
    and (min-width : 1200px) {
+
+    .App {
+      background-color: rgba(17, 246, 66, 0.12);
+      height: 100vh;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
     
     .modaldiv { 
+      width: 60%;
       grid-template-columns: 1fr auto 1fr;
       grid-template-rows: 1fr;
       height: 80%;
-      grid-template-areas: "first middle last"}
+      grid-template-areas: "first middle last";
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    }
+
     .rightModal{ 
       grid-area: last;
+      
 
     }
     .borderLine {
